Discord files re added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<a href="" class="navbar-mobile-toggle">
 						<img src="images/logo-2.svg" alt="">
 					</a>
-					<i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+					<i class="fa-solid fa-xmark hamburger-close" onclick="closeMenu()"></i>
 					<li class="nav-list">
 						<a href="index.html" class="nav-link">Home</a>
 					</li>
@@ -42,16 +42,13 @@
 						<a href="" class="nav-link">Support</a>
 					</li>
 
-					<a href="" class="btn btn-small btn-brand">
-						<i class="fa-solid fa-arrow-down-to-line"></i>
-						Download for Windows
-					</a>
+					
 				</ul>
 
 				<div class="nav-items-right">
 					<a href="" class="btn btn-small btn-light">Open Discord</a>
 					<span class="mobile-toggle">
-						<i class="fa-solid fa-bars" onclick="openMenu()"></i>
+						<i class="fa-solid fa-bars hamburger" onclick="openMenu()"></i>
 					</span>
 				</div>
 			</nav>
@@ -80,7 +77,7 @@
 
 	<!-- SECTION 1 - COLLABORATION SECTION -->
 	<section class="collaboration">
-		<div class="row container" data-aos="fade-up">
+		<div class="row container" data-aos="fade-up" data-aos-duration="1000">
 			<img src="images/section-1.svg" alt="Collaboration" class="grid-img">
 			<div class="text-group">
 				<h1 class="title secondary-title">Create an invite-only place where you belong
@@ -94,7 +91,7 @@
 
 	<!-- SECTION 2 - VOICE CHANNEL SECTION -->
 	<section class="voice-channel">
-		<div class="row container" data-aos="fade-up">
+		<div class="row container" data-aos="fade-up" data-aos-duration="1000">
 			<img src="images/section-2.svg" alt="Voice Channel" class="grid-img order-2">
 			<div class="text-group order-1">
 				<h1 class="title secondary-title">Where hanging out is easy
@@ -108,7 +105,7 @@
 
 	<!-- SECTION 3 - MODERATION SECTION -->
 	<section class="moderation">
-		<div class="row container" data-aos="fade-up">
+		<div class="row container" data-aos="fade-up" data-aos-duration="1000">
 			<img src="images/section-3.svg" alt="Moderation" class="grid-img">
 			<div class="text-group">
 				<h1 class="title secondary-title">From few to a fandom
@@ -122,7 +119,7 @@
 
 	<!-- SECTION 4 - VIDEO CALL SECTION -->
 	<section class="video-call">
-		<div class="row container" data-aos="fade-up">
+		<div class="row container" data-aos="fade-up" data-aos-duration="1000">
 			<div class="text-group">
 				<h1 class="title secondary-title">RELIABLE TECH FOR STAYING CLOSE
 				</h1>
@@ -136,7 +133,7 @@
 
 	<!-- SECTION 5 - DOWNLOAD SECTION -->
 	<section class="download">
-		<div class="row container remove-grid">
+		<div class="row container remove-grid" data-aos="fade-up" data-aos-duration="1000">
 			<img src="images/sparkles.svg" alt="Sparkles" class="sparkles">
 			<h2>Ready to start your journey?
 			</h2>
